--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,14 +1,90 @@
 .sidebar {
-    padding: 56px 24px 24px 24px;
-    width: 20vw;
+    padding: 24px 16px 56px 16px;
+    width: 25vw;
     height: 100dvh;
     max-height: 100dvh;
+    background-color: #F5F5FF;
+    overflow: auto;
 }
 
 .sidebar-icon {
-    position:fixed;
+    position: fixed;
     left: 24px;
     z-index: 1000;
     bottom: 32px;
 }
 
+.form-section {
+    padding: 12px;
+    margin-bottom: 12px;
+}
+
+.form, .form-section {
+    border: 1px solid #ddd;
+    border-radius: 12px;
+}
+
+.form {
+    padding: 24px 12px;
+    background-color: white;
+}
+
+.form-title {
+    padding-bottom: 12px;
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+.form-label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+}
+
+.form-label span {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+    color: var(--primary-color);
+    font-size: 14px;
+}
+
+.form-input {
+    padding: 8px;
+    border-radius: 4px;
+    background-color: #F5F5FF;
+    color:var(--primary-color);
+}
+
+.form-input::placeholder{
+    color:#A49CFF;
+    font-size: 13px;
+}
+
+.form-input:focus {
+    border-color: #F5F5FF;
+    outline: none;
+    box-shadow: 0 0 4px rgba(0, 123, 255, 0.25);
+}
+
+.form-submit {
+    padding: 8px 16px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100%;
+}
+
+.form-submit:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.form-submit:hover:not(:disabled) {
+    background-color: #0056b3;
+}
