refactor: change experience form checkbox

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -14,6 +14,20 @@
     bottom: 32px;
 }
 
+.reset-forms-btn {
+    background: transparent;
+    text-align: right;
+    width: 100%;
+    padding-bottom: 8px;
+    font-size: 14px;
+    color: gray;
+    font-weight: 500;
+}
+
+.reset-forms-btn:hover {
+    text-decoration: underline;
+}
+
 .form-section {
     padding: 12px;
     margin-bottom: 12px;
@@ -88,3 +102,45 @@
 .form-submit:hover:not(:disabled) {
     background-color: #0056b3;
 }
+
+.form-checkbox {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    margin-bottom: 12px;
+ 
+  }
+  .form-checkbox span {
+    color: gray;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  .custom-checkbox {
+    display: inline-block;
+    width: 22px;
+    height: 20px;
+    border-radius: 3px;
+    position: relative;
+    background: lightgray;
+  }
+  
+  input[type="checkbox"]:checked ~ .custom-checkbox {
+    background: var(--primary-color);
+  }
+  
+  input[type="checkbox"]:checked ~ .custom-checkbox::after {
+    content: '';
+    position: absolute;
+    inset:0;
+    margin: auto;
+    width: 4px;
+    height: 12px;
+    top: -5px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+  
