--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -1,11 +1,38 @@
 .resume {
-    max-width: 1000px;
+    max-width: 900px;
     margin: auto;
     padding: 24px 16px;
     margin-top: 24px;
     background-color: white;
     border: 0.5px solid #F5F5FF; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); 
+    color: darkslategray;
+    padding: 48px 24px;
+}
+
+.resume-section {
+    margin-bottom: 24px;
+}
+
+.section-title {
+    padding-bottom: 8px;
+    margin-bottom: 12px;
+    position: relative;
+    font-size: larger;
+    font-weight: 700;
+    color: rgb(83, 82, 82);
+    text-transform: uppercase;
+}
+
+.section-title::after {
+   content: '';
+   position: absolute;
+   height: 6px;
+   width: 9px;
+   background-color: gray;
+   left: 0;
+   bottom: -2px;
+   border-radius: 2px;
 }
 
 .profile {
@@ -15,4 +42,36 @@
 .name {
     font-size: 32px;
     padding-bottom: 8px;
+}
+
+.profile-link a {
+    margin-left: 4px;
+    color: darkslategray;
+}
+
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.markdown {
+    padding-left: 32px;
+}
+
+.job-title {
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 4px;
+}
+
+.company-name {
+    padding-bottom: 6px;
+    color: gray;
+}
+
+.education, .experiences  {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    margin-top: 16px;
 }
