feat: reset resume

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,16 @@ a {
     width: 100%;
 }
 
+.reset-btn {
+    background-color: transparent;
+    font-weight: 500;
+    font-size: 13px;
+}
+
+.reset-btn:hover {
+    text-decoration: underline;
+}
+
 @media (max-width: 1100px) {
     .transformed {
         transform: translateX(-100vw);
